manifests/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: webapp
  
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
